# vmn

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PRD.md  README.md  TODO.md
.github/workflows/: publish.yml
docs/: trusted-publishing.md
src/: lib.rs  main.rs
tests/: cli.rs
